test/classes/jplevyak/record_type_hierarchy-2.good
record_type_hierarchy-2.chpl:16: error: unresolved call 'f(D)'
record_type_hierarchy-2.chpl:10: note: candidates are: f(a: C)
